# RAK_Rust_ARM_Kernel

./: Cargo.toml  Makefile  README.md  aarch64-qemu-virt.ld  aarch64-rasp3b.ld  run.sh  rust-toolchain.toml  test_runner.sh  virt.dtb
.cargo/: .crates.toml  .crates2.json  config.toml
crates/core/: Cargo.toml
crates/core/src/: main.rs  panic.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: gpio.rs  lib.rs  mbox.rs  mmio.rs  uart.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs  log.rs  main.rs  panic.rs  start.s
crates/kernel/src/cpu/: el.rs  exceptions.rs  exceptions.s  mod.rs
crates/kernel/src/cpu/qemu/: mod.rs
crates/kernel/src/drivers/: device_tree.rs  gic.rs  gpio.rs  mbox.rs  mmio.rs  mod.rs  systimer.rs  uart.rs
crates/kernel/src/syncronization/: atomic.rs  mod.rs  mutex_spinlock.rs
crates/kernel/src/utils/: mod.rs  utils.s
crates/testlib/test_macro/: Cargo.toml
crates/testlib/test_types/: Cargo.toml
crates/testlib/test_types/src/: lib.rs
crates/utils/src/: lib.rs
linkerfiles/: aarch64-qemu.ld  aarch64-rasp3b.ld
targetfiles/: aarch64-unknown-none-raspb.json  aarch64-unknown-none.json
