[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdt = "0.1.5"
test_types = { path = "../testlib/test_types" }

[dev-dependencies]
test_macro = {path = "../testlib/test_macro"}

[features]
qemu = []
raspberry = []
test_build = []

[lib]
name = "libkernel"
test = true

[[bin]]
name = "kernel"
test = false

